Main fragments with new architecture

--- a/app/src/main/res/layout/bottom_sheet_comment.xml
+++ b/app/src/main/res/layout/bottom_sheet_comment.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="collectViewModel"
-            type="org.mpmg.mpapp.ui.viewmodels.CollectViewModel" />
+            type="org.mpmg.mpapp.ui.screens.collect.viewmodels.CollectFragmentViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
