--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_main"
-    tools:context=".ui.screens.base.BaseFragment">
+    tools:context=".ui.screens.publicwork.fragments.PublicWorkBaseFragment">
 
     <fragment
         android:id="@+id/navHost_baseFragment"
