--- a/app/src/main/res/layout/fragment_collect_main.xml
+++ b/app/src/main/res/layout/fragment_collect_main.xml
@@ -9,10 +9,6 @@
         <import type="android.view.View" />
 
         <variable
-            name="collectViewModel"
-            type="org.mpmg.mpapp.ui.viewmodels.CollectViewModel" />
-
-        <variable
             name="collectFragmentViewModel"
             type="org.mpmg.mpapp.ui.screens.collect.viewmodels.CollectFragmentViewModel" />
     </data>
@@ -31,7 +27,7 @@
             android:layout_marginTop="@dimen/margin_xlarge"
             android:layout_marginEnd="@dimen/margin_default"
             android:singleLine="true"
-            android:text="@{collectViewModel.publicWork.publicWork.name}"
+            android:text="@{collectFragmentViewModel.selectedPublicWork.publicWork.name}"
             app:layout_constraintEnd_toStartOf="@+id/materialButton_collectMainFragment_edit"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_small"
             android:layout_marginEnd="@dimen/margin_small"
-            android:text="@{collectViewModel.publicWork.address.toString()}"
+            android:text="@{collectFragmentViewModel.selectedPublicWork.address.toString()}"
             app:layout_constraintEnd_toStartOf="@+id/materialButton_collectMainFragment_edit"
             app:layout_constraintStart_toStartOf="@+id/textView_collectMainFragment_name"
             app:layout_constraintTop_toBottomOf="@+id/textView_collectMainFragment_name" />
