--- a/app/src/main/res/layout/item_public_work_list.xml
+++ b/app/src/main/res/layout/item_public_work_list.xml
@@ -1,87 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView_itemPublicWorkList_mainContainer"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/margin_default"
-    android:layout_marginVertical="@dimen/margin_small"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/colorPrimary"
-    app:cardCornerRadius="10dp">
+<layout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+
+        <variable
+            name="publicWork"
+            type="org.mpmg.mpapp.ui.screens.publicwork.models.PublicWorkListItem" />
+    </data>
+
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/cardView_itemPublicWorkList_mainContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_default"
+        android:layout_marginVertical="@dimen/margin_small"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardCornerRadius="10dp">
 
-        <TextView
-            android:id="@+id/textView_itemPublicWorkList_name"
-            style="@style/MPAppTheme.PublicWorkName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_medium"
-            android:layout_marginTop="@dimen/margin_small"
-            android:layout_marginEnd="@dimen/margin_medium"
-            android:singleLine="true"
-            app:layout_constraintEnd_toStartOf="@+id/textView_itemPublicWorkList_distance"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="E.E. Maurício Murgel" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView_itemPublicWorkList_distance"
-            style="@style/MPAppTheme.PublicWorkDistance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/margin_default"
-            android:text="@string/label_default_distance"
-            android:textSize="@dimen/font_default"
-            app:layout_constraintBottom_toBottomOf="@+id/textView_itemPublicWorkList_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView_itemPublicWorkList_name" />
+            <TextView
+                android:id="@+id/textView_itemPublicWorkList_name"
+                style="@style/MPAppTheme.PublicWorkName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:singleLine="true"
+                android:text="@{publicWork.name}"
+                app:layout_constraintEnd_toStartOf="@+id/textView_itemPublicWorkList_distance"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="E.E. Maurício Murgel" />
 
-        <TextView
-            android:id="@+id/textView_itemPublicWorkList_address"
-            style="@style/MPAppTheme.PublicWorkAddress"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:maxLines="2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textView_itemPublicWorkList_name"
-            app:layout_constraintStart_toStartOf="@+id/textView_itemPublicWorkList_name"
-            app:layout_constraintTop_toBottomOf="@+id/textView_itemPublicWorkList_name"
-            tools:text="Av. Amazonas, 5154 - Nova Suíça Belo Horizonte - 30421-056" />
+            <TextView
+                android:id="@+id/textView_itemPublicWorkList_distance"
+                style="@style/MPAppTheme.PublicWorkDistance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_default"
+                android:text="@string/label_default_distance"
+                android:textSize="@dimen/font_default"
+                app:layout_constraintBottom_toBottomOf="@+id/textView_itemPublicWorkList_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView_itemPublicWorkList_name" />
 
-        <ImageView
-            android:id="@+id/imageView_itemPublicWorkList_sent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            android:layout_marginEnd="@dimen/margin_default"
-            android:src="@drawable/ic_sent"
-            android:tint="@color/colorBlue1"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_itemPublicWorkList_distance" />
+            <TextView
+                android:id="@+id/textView_itemPublicWorkList_address"
+                style="@style/MPAppTheme.PublicWorkAddress"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:maxLines="2"
+                android:text="@{publicWork.addressString}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/textView_itemPublicWorkList_name"
+                app:layout_constraintStart_toStartOf="@+id/textView_itemPublicWorkList_name"
+                app:layout_constraintTop_toBottomOf="@+id/textView_itemPublicWorkList_name"
+                tools:text="Av. Amazonas, 5154 - Nova Suíça Belo Horizonte - 30421-056" />
 
-        <ImageView
-            android:id="@+id/imageView_itemPublicWorkList_check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_xsmall"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:src="@drawable/ic_check"
-            android:tint="@color/colorGreenMP"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/imageView_itemPublicWorkList_sent"
-            app:layout_constraintStart_toStartOf="@+id/imageView_itemPublicWorkList_sent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView_itemPublicWorkList_sent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/imageView_itemPublicWorkList_sent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_default"
+                android:src="@drawable/ic_sent"
+                android:visibility="@{publicWork.sentVisibility}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView_itemPublicWorkList_distance"
+                app:tint="@color/colorBlue1" />
 
-</androidx.cardview.widget.CardView>
+            <ImageView
+                android:id="@+id/imageView_itemPublicWorkList_check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_xsmall"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:src="@drawable/ic_check"
+                android:visibility="@{publicWork.checkVisibility}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/imageView_itemPublicWorkList_sent"
+                app:layout_constraintStart_toStartOf="@+id/imageView_itemPublicWorkList_sent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView_itemPublicWorkList_sent"
+                app:tint="@color/colorGreenMP" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+</layout>
