--- a/app/src/main/res/navigation/base_graph.xml
+++ b/app/src/main/res/navigation/base_graph.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/publicWorkListFragment"
-        android:name="org.mpmg.mpapp.ui.screens.publicwork.fragments.PublicWorkListFragment"
+        android:name="org.mpmg.mpapp.ui.screens.publicwork.fragments.list.PublicWorkListFragment"
         android:label="fragment_public_work_list"
         tools:layout="@layout/fragment_public_work_list" />
 
     <fragment
         android:id="@+id/publicWorkFilterFragment"
-        android:name="org.mpmg.mpapp.ui.screens.publicwork.fragments.PublicWorkFilterFragment"
+        android:name="org.mpmg.mpapp.ui.screens.publicwork.fragments.list.PublicWorkFilterFragment"
         android:label="fragment_public_work_filter"
         tools:layout="@layout/fragment_public_work_filter" />
 
