--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -30,7 +30,7 @@
 
     <fragment
         android:id="@+id/baseFragment"
-        android:name="org.mpmg.mpapp.ui.screens.base.BaseFragment"
+        android:name="org.mpmg.mpapp.ui.screens.publicwork.fragments.PublicWorkBaseFragment"
         android:label="fragment_base"
         tools:layout="@layout/fragment_base">
         <action
@@ -62,11 +62,9 @@
             app:popEnterAnim="@anim/fade_in"
             app:popExitAnim="@anim/fade_out" />
 
-        <action
-            android:id="@+id/action_collectMainFragment_to_baseFragment"
-            app:destination="@id/baseFragment"
-            app:popUpTo="@id/baseFragment"
-            app:popUpToInclusive="true" />
+        <argument
+            android:name="publicWorkId"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/setupApplicationFragment"
@@ -83,7 +81,7 @@
 
     <fragment
         android:id="@+id/publicWorkAddFragment"
-        android:name="org.mpmg.mpapp.ui.screens.publicwork.fragments.PublicWorkAddFragment"
+        android:name="org.mpmg.mpapp.ui.screens.publicwork.fragments.crud.PublicWorkCrudFragment"
         android:label="PublicWorkAddFragment">
 
         <action
@@ -97,21 +95,34 @@
             app:exitAnim="@anim/fade_out"
             app:popEnterAnim="@anim/fade_in"
             app:popExitAnim="@anim/fade_out" />
+        <argument
+            android:name="publicWorkId"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
     </fragment>
 
     <fragment
         android:id="@+id/photoAddFragment"
-        android:name="org.mpmg.mpapp.ui.screens.photo.PhotoAddFragment"
+        android:name="org.mpmg.mpapp.ui.screens.photo.fragments.PhotoAddFragment"
         android:label="fragment_add_photo"
         tools:layout="@layout/fragment_add_photo">
         <action
             android:id="@+id/action_photoAddFragment_pop"
             app:popUpTo="@id/photoAddFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="collectId"
+            app:argType="string" />
+        <argument
+            android:name="photoId"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
     </fragment>
     <fragment
         android:id="@+id/mapFragment"
-        android:name="org.mpmg.mpapp.ui.screens.map.MapFragment"
+        android:name="org.mpmg.mpapp.ui.screens.publicwork.fragments.crud.PublicWorkCrudMapFragment"
         android:label="fragment_map"
         tools:layout="@layout/fragment_map">
         <action
