Add map view to Android app.

--- a/app/src/main/res/navigation/base_graph.xml
+++ b/app/src/main/res/navigation/base_graph.xml
@@ -16,5 +16,10 @@
         android:name="org.mpmg.mpapp.ui.screens.publicwork.fragments.list.PublicWorkFilterFragment"
         android:label="fragment_public_work_filter"
         tools:layout="@layout/fragment_public_work_filter" />
+    <fragment
+        android:id="@+id/publicWorkMapFragment"
+        android:name="org.mpmg.mpapp.ui.screens.publicwork.fragments.list.PublicWorkMapFragment"
+        android:label="PublicWorkMapFragment"
+        tools:layout="@layout/fragment_public_work_map"/>
 
 </navigation>
