--- a/app/src/main/res/layout/fragment_public_work_filter.xml
+++ b/app/src/main/res/layout/fragment_public_work_filter.xml
@@ -67,6 +67,43 @@
             tools:ignore="ContentDescription" />
 
         <TextView
+            android:id="@+id/textView_workStateTitle"
+            style="@style/MPAppTheme.Title1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            android:text="@string/label_work_state"
+            android:textAllCaps="true"
+            android:textColor="@color/label1"
+            android:textSize="@dimen/font_default"
+            app:layout_constraintStart_toStartOf="@+id/textView12"
+            app:layout_constraintTop_toBottomOf="@+id/textView_filterFragment_typeOfWork" />
+
+        <TextView
+            android:id="@+id/textView_filterFragment_workState"
+            style="@style/MPAppTheme.EditText2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_default"
+            android:layout_marginTop="@dimen/margin_xsmall"
+            android:layout_marginEnd="@dimen/margin_default"
+            android:hint="@string/label_click_to_select_work_state"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_workStateTitle" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_default"
+            android:src="@drawable/ic_chevron_down"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_filterFragment_workState"
+            app:layout_constraintEnd_toEndOf="@+id/textView_filterFragment_workState"
+            app:layout_constraintTop_toTopOf="@+id/textView_filterFragment_workState"
+            app:tint="@color/colorWhite"
+            tools:ignore="ContentDescription" />
+
+        <TextView
             android:id="@+id/textView13"
             style="@style/MPAppTheme.Title1"
             android:layout_width="wrap_content"
@@ -77,7 +114,7 @@
             android:textColor="@color/label1"
             android:textSize="@dimen/font_default"
             app:layout_constraintStart_toStartOf="@+id/textView12"
-            app:layout_constraintTop_toBottomOf="@+id/textView_filterFragment_typeOfWork" />
+            app:layout_constraintTop_toBottomOf="@+id/textView_filterFragment_workState" />
 
         <RadioGroup
             android:id="@+id/radioGroup_filterFragment_orderBy"
