--- a/app/src/main/res/layout/fragment_inspection_filter.xml
+++ b/app/src/main/res/layout/fragment_inspection_filter.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.screens.surveywork.fragments.list.SurveyFilterFragment">
+    tools:context=".ui.screens.inspection.fragments.list.InspectionFilterFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
