--- a/app/src/main/res/menu/bottom_survey_menu.xml
+++ b/app/src/main/res/menu/bottom_survey_menu.xml
@@ -10,14 +10,14 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/survey_graph"
+        android:id="@+id/inspection_graph"
         android:icon="@drawable/ic_list"
         android:orderInCategory="2"
         android:title="@string/menu_list"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/surveyFilterFragment"
+        android:id="@+id/inspectionFilterFragment"
         android:icon="@drawable/ic_filter"
         android:orderInCategory="3"
         android:title="@string/menu_filter"
