--- a/app/src/main/res/layout/item_public_survey_list.xml
+++ b/app/src/main/res/layout/item_public_survey_list.xml
@@ -12,7 +12,7 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
